fix(lichess): make notification no-permission text readable

--- a/styles/lichess/catppuccin.user.less
+++ b/styles/lichess/catppuccin.user.less
@@ -176,6 +176,9 @@
     .site-buttons .dropdown {
       background: @crust;
     }
+    #notify-app .browser-notification {
+      color: @base;
+    }
     #topnav section > a {
       color: @subtext0;
     }
